<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.earthmc.emcapi</groupId>
  <artifactId>EMCAPI</artifactId>
  <version>3.0.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>EMCAPI</name>

    <description>API for EarthMC using Javalin</description>
    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <url>https://earthmc.net</url>

    <build>
        <finalName>${project.artifactId}-v${project.version}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>

  <repositories>
      <repository>
          <id>papermc-repo</id>
          <url>https://repo.papermc.io/repository/maven-public/</url>
      </repository>
      <repository>
          <id>sonatype</id>
          <url>https://oss.sonatype.org/content/groups/public/</url>
      </repository>
      <repository>
          <id>jitpack.io</id>
          <url>https://jitpack.io</url>
      </repository>
      <repository>
          <id>Scarsz-Nexus</id>
          <url>https://nexus.scarsz.me/content/groups/public/</url>
      </repository>
      <repository>
          <id>placeholderapi</id>
          <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
      </repository>
      <repository>
          <id>earthmc</id>
          <url>https://repo.earthmc.net/releases/</url>
      </repository>
  </repositories>

  <distributionManagement>
    <repository>
        <id>earthmc</id>
        <url>https://repo.earthmc.net/releases</url>
    </repository>
    <snapshotRepository>
        <id>earthmc</id>
        <url>https://repo.earthmc.net/snapshots</url>
    </snapshotRepository>
  </distributionManagement>

  <dependencies>
      <dependency>
          <groupId>io.papermc.paper</groupId>
          <artifactId>paper-api</artifactId>
          <version>1.20.4-R0.1-SNAPSHOT</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>com.github.TownyAdvanced.Towny</groupId>
          <artifactId>towny</artifactId>
          <version>0.100.1.11</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>io.javalin</groupId>
          <artifactId>javalin</artifactId>
          <version>6.3.0</version>
      </dependency>
      <dependency>
          <groupId>com.github.jwkerr</groupId>
          <artifactId>Quarters</artifactId>
          <version>e9ed8a133a</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
          <version>2.16.1</version>
      </dependency>
      <dependency>
          <groupId>com.discordsrv</groupId>
          <artifactId>discordsrv</artifactId>
          <version>1.27.0</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>net.earthmc.superbvote</groupId>
          <artifactId>SuperbVote</artifactId>
          <version>0.6.0</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>net.earthmc.mysterymaster</groupId>
          <artifactId>mysterymaster-api</artifactId>
          <version>1.0.0</version>
          <scope>provided</scope>
      </dependency>
  </dependencies>
</project>
